# cigma

./: .gitignore  Makefile  Makefile.am  README  TODO  appendix.lyx  checklist.txt  cigma.lyx  cigma.lyx~  configure.ac  error_analysis.lyx  examples.lyx  formats.lyx  installation.lyx  interpolation.lyx  introduction.lyx  main.lyx  main2.lyx  main2.lyx15  nocover.lyx  running.lyx  scratch.lyx  subversion.cfg  svn-autoprops.config  variables.in  workfile1.lyx  workfile2.lyx
appendix/: appendix.lyx
benchmarks/short/tests/: bmrsnog_cmp1.sh  bmrsnog_cmp2.sh  bmrsnog_cmp3.sh  bmrsnog_cmp4.sh  bmssnog_cmp1.sh  bmssnog_cmp2.sh  bmssnog_cmp3.sh  bmssnog_cmp4.sh
benchmarks/short/tools/: bmrsnog.py  bmssnog.py  download.sh  off2vtk.py  utils.py  vtkwriter.py
benchmarks/short/vtk/: bottom-layer.vtk  domain.vtk  reverse-slip-fault.vtk
buildtest/: Makefile  rebuild.sh
doc/: .gitignore  main.lyx
doc/figures/bm2/: process-images.sh
doc/figures/bm4/scripts/: reference-hex8.vtk  reference-tet4.vtk  rsng-p0500-g0500-cell-threshold-velo.mv2  ssng-p0250-g0500-point-isosurf-disp.mv2  ssng-p0500-g0500-point-isosurf-velo.mv2  ssng-p0500-g0500.sh
error_analysis/: error_analysis.lyx
examples/: examples.lyx
figures/: common.sh  faults.mv2  full-list.txt  list.txt  reference-tet4.mv2  rsng-p0500-g0500-point-isosurf-res-disp.mv2  rsng-p0500-g0500.sh  ssng-p0250-g0500.sh  ssng-p0500-g0500.sh  ssng-p0500-g0500.velo-010.mv2  strike-slip-fault.vtk
figures/bm1/: process-images.sh
figures/bm3/: process-images.sh
figures/bm4/scripts/: generate-cases.py  list.txt
figures/scripts/: reference-hex8.mv2  ssng-p0500-g0500-isosurf-disp.mv2  top-layer.vtk
figures3/: common.sh
figures3/bm2/: process-images.sh
figures3/bm3/: process-images.sh
file_formats/: file_formats.lyx
formats/: formats.lyx
installation/: installation.lyx
integration/: integration.lyx
interpolation/: interpolation.lyx
introduction/: introduction.lyx
lib/: Makefile
libcigma/: array.c  array.h  dataset.c  dataset.h  h5_attr.c  h5_attr.h  h5_io.c  h5_io.h  mesh.c  mesh.h  split.c  split.h
license/: gpl-license.lyx
m4/: cigma_hdf5.m4  cigma_vtk.m4
running/: running.lyx
scratch/cg/: CMakeLists.txt  README  TODO
scratch/cg/CMake/: FindCigma.cmake  FindHDF5.cmake  FindZLIB.cmake
scratch/cg/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  OrientationAxes.h  RenderHexahedron.h  RenderPoints.h  RenderQuadrangle.h  RenderTetrahedron.h  RenderTriangle.h  TestWindow.cpp  TestWindow.h  TestWindow.ui  main.cpp  testapp.cpp
scratch/utils/: rebuild.sh  vtkio.py  vtkls.cpp
src/: AnnLocator.cpp  AnnLocator.h  AnyOption.cpp  AnyOption.h  Cell.cpp  Cell.h  Command.cpp  Command.h  CommandSet.cpp  CommandSet.h  CompareCmd.cpp  CompareCmd.h  CubeCmd.cpp  CubeCmd.h  CubeMeshPart.cpp  CubeMeshPart.h  DataIO.cpp  DataIO.h  DatasetPath.cpp  DatasetPath.h  DofHandler.cpp  DofHandler.h  EvalCmd.cpp  EvalCmd.h  ExtField.cpp  ExtField.h  ExternalField.cpp  ExternalField.h  ExtractCmd.cpp  ExtractCmd.h  FE.cpp  FE.h  FE_Field.cpp  FE_Field.h  FiatProxy.cpp  FiatProxy.h  FiatProxy.py  Field.cpp  Field.h  FieldIO.cpp  (+130 more)
src/ann/: Makefile  Makefile.dep
src/ann/test/: Makefile  Makefile.dep  ann_sample.cpp
src/cigma/: Cell.py  FiatQuadrature.py
src/cigmalib/: FiatLagrange.py  FiatQuadrature.py  FiatShapes.py  FiatSimplex.py  api.py
src/disloc3d/: Makefile  README  ReverseSlip_ng.m  StrikeSlip_ng.m  cervelli.h  dc3d.h  disloc3d.c  disloc3d.h  disloc3d_mod2.c  disloc3d_mod2.f  h5array.c  h5array.h  h5points.c  mexfunction.f  okadasoln_ng.m  txtarray.c  txtarray.h
src/h5io/: Makefile
src/h5io/t/: Makefile
src/hold/: CompareCmd.cpp  CompareCmd.h  EvalCmd.h  ExtractCmd.h  FE.cpp  FE.h  FieldIO.cpp  FieldIO.h  HdfArray.cpp  HdfArray.h  HdfGroup.cpp  HdfGroup.h  HdfWriter.cpp  HdfWriter.h  MeshIO.cpp  QuadratureIO.cpp  QuadratureIO.h  Reader.h  TextReader.cpp  TextWriter.cpp  VtkList.h  VtkReader.h  VtkWriter.cpp  VtkWriter.h  VtkXmlReader.cpp  VtkXmlReader.h  misc.cpp
src/okada/: cervelli.cpp  cervelli.h  dc3d.cpp  disloc3d.cpp  okadasoln_ng.c
src/oldtests/: Makefile  TestFiatProxy.cpp  TestGaleComparison.cpp  TestHdfReader.cpp  TestMeshPart.cpp  TestNumeric.cpp  TestQuad.cpp  TestQuadrature.cpp  TestTet.cpp  TestVtkUgReader.cpp  p128.vts  p256.vts  triangular3.msh
src/oldtests/old/: strikeslip-compare.sh
src/tests/: Makefile  TestAnn.cpp  TestAnnLocator.cpp  TestAnyOption.cpp  TestCellVolume.cpp  TestDofHandler.cpp  TestDuplicatePoints.cpp  TestFiatProxy.cpp  TestFieldSet.cpp  TestHdfReader.cpp  TestHex.cpp  TestLine.cpp  TestLine.py  TestMeshPart.cpp  TestNumeric.cpp  TestPathUtils.cpp  TestPoints.cpp  TestPointwise.cpp  TestQuad.cpp  TestQuadrature.cpp  TestStringUtils.cpp  TestTet.cpp  TestTimer.cpp  TestTri.cpp  TestVtkReader.cpp  TestVtkReader1.cpp  TestVtkReader2.cpp  TestZeroField.cpp  TestZeroField.out  TestZeroFunction.cpp  p64.vts  strikeslip-compare.py  strikeslip-compare.sh  triangular.py  triangular1.msh  triangular2.msh
src/tests/citcomcu/: compare.py  convert_mesh.py
src/todelete/: VtkUgReader.h  VtkUgSimpleWriter.cpp
tests/hello/: Makefile
tmc/: Bounding_box_3d.cpp  Bounding_box_3d.hpp  Exterior_face.cpp  Exterior_face.hpp  HDF5_Reader.cpp  HDF5_Reader.hpp  Indexed_tetra_set.cpp  Indexed_tetra_set.hpp  Indexed_tetra_set_off_reader.cpp  Indexed_tetra_set_off_reader.hpp  Line_3f.cpp  Line_3f.hpp  Matrix_4d.cpp  Matrix_4d.hpp  Observer.cpp  Observer.hpp  Plane_3f.cpp  Plane_3f.hpp  Plane_RST_3d.cpp  Plane_RST_3d.hpp  Point_3d.cpp  Point_3d.hpp  Point_3f.cpp  Point_3f.hpp  Point_4f.cpp  Point_4f.hpp  QuadratureRule.hpp  Shape.cpp  Shape.hpp  StringUtils.cpp  StringUtils.hpp  Subject.cpp  Subject.hpp  Tetrahedron.cpp  Tetrahedron.hpp  Time_series.cpp  Time_series.hpp  Vector_3b.cpp  Vector_3b.hpp  Vector_3d.cpp  (+42 more)
utils/pylab/: power-fit.py
utils/vtk/: Makefile  mesh-info.cc  pvtr-collect.cc  pvtu-collect.cc  pvtu2vtk.cc  ucd2vtk.cc
